# ingestix

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  NOTICE  README.md  RELEASE_CHECKLIST.md  release.sh  rust-toolchain.toml  todo.md
.cargo/: config.toml
examples/http_webhook/: Cargo.toml  README.md
examples/http_webhook/src/: main.rs
examples/http_webhook_advanced/: Cargo.toml  README.md
examples/http_webhook_advanced/src/: main.rs
examples/http_webhook_generic_json/: Cargo.toml  README.md
examples/http_webhook_generic_json/src/: main.rs
examples/http_webhook_minimal/: Cargo.toml
examples/http_webhook_minimal/src/: main.rs
examples/http_webhook_with_state/: Cargo.toml  README.md
examples/http_webhook_with_state/src/: main.rs
examples/udp_basic/: Cargo.toml  README.md
examples/udp_basic/src/: main.rs
ingestix-core/: Cargo.toml
ingestix-core/src/: http.rs  lib.rs  tcp.rs  udp.rs
ingestix-core/tests/: http_auth.rs  http_flow.rs  http_shutdown.rs  launch_shutdown.rs  tcp_flow.rs  tcp_shutdown.rs  udp_flow.rs  udp_shutdown.rs
ingestix-derive/: Cargo.toml  README.md
ingestix-derive/src/: lib.rs
