[package]
name = "http_webhook"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ingestix = { path = "../../ingestix-core", default-features = false, features = ["full"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"