[package]
name = "http_webhook_advanced"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ingestix = { path = "../../ingestix-core", default-features = false, features = ["derive", "ingestors", "metrics", "logging"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"