[package]
name = "udp_basic"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ingestix = { path = "../../ingestix-core", default-features = false, features = ["derive", "ingestors", "metrics", "logging"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
tracing-subscriber = "0.3"
